--- a/.env
+++ b/.env
@@ -1,9 +1,15 @@
 
+# todo app env  Backend
 PORT=8000
-DB_HOST=localhost
+DB_HOST=database
 DB_PORT=3306
 DB_USER=MASTER 
 DB_PASSWORD=NZONKEM
 DB_ROOT_PASSWORD=super_admin
 DB_NAME=tododb
-ALLOWED_ORIGINS=http://localhost:3000,
+ALLOWED_ORIGINS=http://localhost:8080
+
+
+# todo app env  Frontend
+NEXT_PUBLIC_API_BaseUrl=http://localhost:8000
+NEXT_PUBLIC_API_KEY=1234567890abcdef
